--- a/day 1_10/Day 3.ipynb
+++ b/day 1_10/Day 3.ipynb
@@ -191,11 +191,139 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3 Nested if statements\n",
+    "\n",
+    "using the rollercoaster example from earlier add price per age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter your height in cm 120\n",
+      "Please enter your age65\n",
+      "Price = £5\n"
+     ]
+    }
+   ],
+   "source": [
+    "height = int(input('Please enter your height in cm '))\n",
+    "\n",
+    "if height >= 120:\n",
+    "    age = int(input('Please enter your age'))\n",
+    "    if age <=12 or age >= 65:\n",
+    "        print('Price = £5')\n",
+    "    elif age <18:\n",
+    "        print('Price is £7')\n",
+    "    else:\n",
+    "        print('Price is £12')\n",
+    "else:\n",
+    "    print('Sorry, you are too small for this ride, come back when you have grown a little')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BMI Calculator 2.0\n",
+    "\n",
+    "# Instructions\n",
+    "\n",
+    "Write a program that interprets the Body Mass Index (BMI) based on a user's weight and height.\n",
+    "\n",
+    "It should tell them the interpretation of their BMI based on the BMI value.\n",
+    "\n",
+    "- Under 18.5 they are underweight\n",
+    "- Over 18.5 but below 25 they have a normal weight\n",
+    "- Over 25 but below 30 they are slightly overweight\n",
+    "- Over 30 but below 35 they are obese\n",
+    "- Above 35 they are clinically obese.\n",
+    "\n",
+    "![](https://cdn.fs.teachablecdn.com/qTOp8afxSkGfU5YGYf36)\n",
+    "\n",
+    "The BMI is calculated by dividing a person's weight (in kg) by the square of their height (in m):\n",
+    "\n",
+    "![](https://cdn.fs.teachablecdn.com/jKHjnLrNQjqzdz3MTMyv)\n",
+    "\n",
+    "**Warning** you should **round** the result to the nearest whole number. The interpretation message needs to include the words in bold from the interpretations above. e.g. **underweight, normal weight,  overweight, obese, clinically obese**. \n",
+    "\n",
+    "# Example Input\n",
+    "\n",
+    "```\n",
+    "weight = 85\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "height = 1.75\n",
+    "```\n",
+    "\n",
+    "# Example Output\n",
+    "\n",
+    "85 ÷ (1.75 x 1.75) =  27.755102040816325\n",
+    "\n",
+    "```\n",
+    "Your BMI is 28, you are slightly overweight.\n",
+    "```\n",
+    "\n",
+    "e.g. When you hit **run**, this is what should happen:   \n",
+    "\n",
+    "![](https://cdn.fs.teachablecdn.com/mGRynIETXuVqoDk8unci)\n",
+    "\n",
+    "The testing code will check for print output that is formatted like one of the lines below:\n",
+    "\n",
+    "```\n",
+    "\"Your BMI is 18, you are underweight.\"\n",
+    "\"Your BMI is 22, you have a normal weight.\"\n",
+    "\"Your BMI is 28, you are slightly overweight.\"\n",
+    "\"Your BMI is 33, you are obese.\"\n",
+    "\"Your BMI is 40, you are clinically obese.\"\n",
+    "```\n",
+    "\n",
+    "Hint\n",
+    "\n",
+    "1. Try to use the **exponent** operator in your code.\n",
+    "2. Remember to **round** your result to the nearest whole number. \n",
+    "3. Make sure you include the words in **bold** from the interpretations. \n",
+    "\n",
+    "# Test Your Code\n",
+    "\n",
+    "Before checking the solution, try copy-pasting your code into this repl: \n",
+    "\n",
+    "[https://repl.it/@appbrewery/day-3-2-test-your-code](https://repl.it/@appbrewery/day-3-2-test-your-code)\n",
+    "\n",
+    "This repl includes my testing code that will check if your code meets this assignment's objectives. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Solution\n",
+    "\n",
+    "[https://repl.it/@appbrewery/day-3-2-solution](https://repl.it/@appbrewery/day-3-2-solution)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "height = float(input('Please enter your height (m):'))\n",
+    "weight = float(input('Please enter your weight (Kg):'))\n",
+    "\n",
+    "# Calculate the BMI and convert to an integer\n",
+    "bmi = int(weight/(height**2))\n",
+    "\n",
+    "print(f\"Your BMI is: {bmi}\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
