--- a/day 1_10/Day 3.ipynb
+++ b/day 1_10/Day 3.ipynb
@@ -13,21 +13,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Control Flow with if / else and Conditional Operators"
+    "## 3.0 Control Flow with if / else and Conditional Operators"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to the roller coaster\n",
-      "please enter your height (cm) 120\n",
-      "You can ride the rollercoaster\n"
+      "Welcome to the roller coaster\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-f5243f9a85a6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Welcome to the roller coaster'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mheight\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'please enter your height (cm) '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mheight\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m120\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'You can ride the rollercoaster'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m    858\u001b[0m                 \u001b[1;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    859\u001b[0m             )\n\u001b[1;32m--> 860\u001b[1;33m         return self._input_request(str(prompt),\n\u001b[0m\u001b[0;32m    861\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    862\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m    902\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    903\u001b[0m                 \u001b[1;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 904\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Interrupted by user\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    905\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    906\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Invalid Message:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
@@ -46,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 [Interactive Coding Exercise] Odd or Even? Introducing the Modulo"
+    "## 3.1 [Interactive Coding Exercise] Odd or Even? Introducing the Modulo"
    ]
   },
   {
@@ -169,18 +180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter a number: 12548\n",
-      "12548 is an even number\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num = int(input('Please enter a number: '))\n",
     "\n",
@@ -194,26 +196,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Nested if statements\n",
+    "## 3.1 Nested if statements\n",
     "\n",
     "using the rollercoaster example from earlier add price per age"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter your height in cm 120\n",
-      "Please enter your age65\n",
-      "Price = £5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "height = int(input('Please enter your height in cm '))\n",
     "\n",
@@ -311,19 +303,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter your height (m):1.8\n",
+      "Please enter your weight (Kg):120\n",
+      "Your BMI is 37, you are clinicly obese\n"
+     ]
+    }
+   ],
    "source": [
     "height = float(input('Please enter your height (m):'))\n",
     "weight = float(input('Please enter your weight (Kg):'))\n",
+    "message = \"\"\n",
     "\n",
     "# Calculate the BMI and convert to an integer\n",
     "bmi = int(weight/(height**2))\n",
     "\n",
-    "print(f\"Your BMI is: {bmi}\")\n",
+    "if bmi <= 18.5:\n",
+    "    message = f'Your BMI is {bmi}, you are underweight'\n",
+    "elif bmi <=25 :\n",
+    "        message = f'Your BMI is {bmi}, you are normal weight'\n",
+    "elif bmi <=30:\n",
+    "        message = f'Your BMI is {bmi}, you are slightly overweight'\n",
+    "elif bmi <=35:\n",
+    "        message = f'Your BMI is {bmi}, you are obese'\n",
+    "else:\n",
+    "        message = f'Your BMI is {bmi}, you are clinicly obese'\n",
+    "\n",
+    "print(f\"{message}\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3 Leap Year\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Leap Year\n",
+    "\n",
+    "# 💪This is a Difficult Challenge 💪\n",
+    "\n",
+    "# Instructions\n",
+    "\n",
+    "Write a program that works out whether if a given year is a leap year. A normal year has 365 days, leap years have 366, with an extra day in February. The reason why we have leap years is really fascinating, this video does it more justice:\n",
+    "\n",
+    "[https://www.youtube.com/watch?v=xX96xng7sAE](https://www.youtube.com/watch?v=xX96xng7sAE)\n",
+    "\n",
+    "This is how you work out whether if a particular year is a leap year. \n",
+    "\n",
+    "> `on every year that is evenly divisible by 4\n",
+    ">   **except** every year that is evenly divisible by 100\n",
+    ">     **unless** the year is also evenly divisible by 400`\n",
+    "\n",
+    "e.g. The year 2000:\n",
+    "\n",
+    "2000 ÷ 4 = 500 (Leap)\n",
+    "\n",
+    "2000 ÷ 100 = 20 (Not Leap)\n",
+    "\n",
+    "2000 ÷ 400 = 5 (Leap!)\n",
+    "\n",
+    "So the year 2000 is a leap year.\n",
+    "\n",
+    "But the year 2100 is not a leap year because:\n",
+    "\n",
+    "2100 ÷  4 = 525 (Leap)\n",
+    "\n",
+    "2100 ÷ 100 = 21 (Not Leap)\n",
+    "\n",
+    "2100 ÷ 400 = 5.25 (Not Leap)\n",
+    "\n",
+    "**Warning** your output should match the Example Output format exactly, even the positions of the commas and full stops. \n",
+    "\n",
+    "# Example Input 1\n",
+    "\n",
+    "```\n",
+    "2400\n",
+    "```\n",
+    "\n",
+    "# Example Output 1\n",
+    "\n",
+    "```\n",
+    "Leap year.\n",
+    "```\n",
+    "\n",
+    "# Example Input 2\n",
+    "\n",
+    "```\n",
+    "1989\n",
+    "```\n",
+    "\n",
+    "# Example Output 2\n",
+    "\n",
+    "```\n",
+    "Not leap year.\n",
+    "```\n",
+    "\n",
+    "e.g. When you hit **run**, this is what should happen:  \n",
+    "\n",
+    " ![](https://cdn.fs.teachablecdn.com/AthNqKoSm6JD4sMom2X2)\n",
+    "\n",
+    "# Hint\n",
+    "\n",
+    "1. Try to visualise the rules by creating a flow chart on www.draw.io\n",
+    "2. If you really get stuck, you can see the flow chart I created: \n",
+    "\n",
+    "https://bit.ly/36BjS2D\n",
+    "\n",
+    "# Test Your Code\n",
+    "\n",
+    "Before checking the solution, try copy-pasting your code into this repl: \n",
+    "\n",
+    "[https://repl.it/@appbrewery/day-3-3-test-your-code](https://repl.it/@appbrewery/day-3-3-test-your-code)\n",
+    "\n",
+    "This repl includes my testing code that will check if your code meets this assignment's objectives. \n",
+    "\n",
+    "\n",
+    "# Solution\n",
+    "\n",
+    "[https://repl.it/@appbrewery/day-3-3-solution](https://repl.it/@appbrewery/day-3-3-solution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a year2100\n",
+      "2100 is not a leap year\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = int(input('Please enter a year'))\n",
+    "           \n",
+    "if year % 4 == 0:\n",
+    "    if year % 100 == 0:\n",
+    "        if year % 400 == 0:\n",
+    "            print(f'{year} is a leap year')\n",
+    "        else:\n",
+    "            print(f'{year} is not a leap year')\n",
+    "    else:\n",
+    "        print(f'{year} is not a leap year')\n",
+    "else:\n",
+    "    print(f'{year} is not a leap year')\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
