--- a/day 1_10/Day 7 - Hangman.ipynb
+++ b/day 1_10/Day 7 - Hangman.ipynb
@@ -32,27 +32,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pssst, the solution is baboon.\n",
-      "['_', '_', '_', '_', '_', '_']\n",
-      "Guess a letter: a\n",
-      "['a', '_', '_', '_', '_', '_']\n",
-      "\n",
-      "  +---+\n",
-      "  |   |\n",
-      "  O   |\n",
-      "      |\n",
-      "      |\n",
-      "      |\n",
-      "=========\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Step 2\n",
     "\n",
@@ -120,11 +100,6 @@
     "chosen_word = random.choice(word_list)\n",
     "lives = 6\n",
     "end_of_game = False\n",
-    "inword = False\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "#Testing code\n",
     "print(f'Pssst, the solution is {chosen_word}.')\n",
@@ -139,30 +114,31 @@
     "\n",
     "while not end_of_game:\n",
     "    guess = input(\"Guess a letter: \").lower()\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "    inword = False\n",
+    "       \n",
     "    letter_index = 0\n",
     "    for letter in chosen_word:\n",
     "        if letter == guess:\n",
     "            display[letter_index] = letter\n",
     "            letter_index +=1\n",
     "            inword = True\n",
-    "       \n",
-    "        \n",
-    "    if inword == fal:    \n",
-    "        lives -=1\n",
-    "    print(display)\n",
-    "    print(stages[lives])\n",
-    " \n",
+    "        else:\n",
+    "            letter_index += 1\n",
     "    \n",
+    "    if '_' not in display:\n",
+    "        end_of_game = True\n",
+    "        print('You win. Well Done!')\n",
+    "    else:\n",
+    "        print(display)\n",
+    "        if inword == False:\n",
+    "            lives -= 1\n",
+    "            print(stages[lives])\n",
+    "        if lives == 0:\n",
+    "            end_of_game=True\n",
     "\n",
-    "if not '_' in display:\n",
-    "    print()\n",
-    "    print ('You win!')\n",
-    "else:\n",
-    "    print()\n",
-    "    print('You loose')\n",
+    "\n",
+    "            \n",
+    "    \n",
     "        \n"
    ]
   },
@@ -179,12 +155,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Step 3\n",
-    "\n",
     "import random\n",
-    "word_list = [\"aardvark\", \"baboon\", \"camel\"]\n",
+    "\n",
+    "#TODO-1: - Update the word list to use the 'word_list' from hangman_words.py\n",
+    "#Delete this line: word_list = [\"ardvark\", \"baboon\", \"camel\"]\n",
+    "from hangman_words import word_list\n",
+    "\n",
     "chosen_word = random.choice(word_list)\n",
     "word_length = len(chosen_word)\n",
+    "\n",
+    "end_of_game = False\n",
+    "lives = 6\n",
+    "\n",
+    "#TODO-3: - Import the logo from hangman_art.py and print it at the start of the game.\n",
+    "from hangman_art import logo\n",
+    "print(logo)\n",
     "\n",
     "#Testing code\n",
     "print(f'Pssst, the solution is {chosen_word}.')\n",
@@ -194,11 +179,12 @@
     "for _ in range(word_length):\n",
     "    display += \"_\"\n",
     "\n",
-    "#TODO-1: - Use a while loop to let the user guess again. The loop should only stop once the user has guessed all the letters in the chosen_word and 'display' has no more blanks (\"_\"). Then you can tell the user they've won.\n",
-    "end_of_game = False\n",
-    "\n",
     "while not end_of_game:\n",
     "    guess = input(\"Guess a letter: \").lower()\n",
+    "\n",
+    "    #TODO-4: - If the user has entered a letter they've already guessed, print the letter and let them know.\n",
+    "    if guess in display:\n",
+    "        print(f\"You've already guessed {guess}\")\n",
     "\n",
     "    #Check guessed letter\n",
     "    for position in range(word_length):\n",
@@ -207,12 +193,27 @@
     "        if letter == guess:\n",
     "            display[position] = letter\n",
     "\n",
-    "    print(display)\n",
+    "    #Check if user is wrong.\n",
+    "    if guess not in chosen_word:\n",
+    "        #TODO-5: - If the letter is not in the chosen_word, print out the letter and let them know it's not in the word.\n",
+    "        print(f\"You guessed {guess}, that's not in the word. You lose a life.\")\n",
+    "        \n",
+    "        lives -= 1\n",
+    "        if lives == 0:\n",
+    "            end_of_game = True\n",
+    "            print(\"You lose.\")\n",
     "\n",
-    "    #Check if there are no more \"_\" left in 'display'. Then all letters have been guessed.\n",
+    "    #Join all the elements in the list and turn it into a String.\n",
+    "    print(f\"{' '.join(display)}\")\n",
+    "\n",
+    "    #Check if user has got all letters.\n",
     "    if \"_\" not in display:\n",
     "        end_of_game = True\n",
-    "        print(\"You win.\")"
+    "        print(\"You win.\")\n",
+    "\n",
+    "    #TODO-2: - Import the stages from hangman_art.py and make this error go away.\n",
+    "    from hangman_art import stages\n",
+    "    print(stages[lives])"
    ]
   },
   {
